Moved ProductGrid and Titlebar into their own components, added Product sorting and filtering by category, added ProductGrid shuffling with react-flip-toolkit, tweaked ProductCart rollover animations, code cleanup

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "yard sale.",
+  "name": "yard sale. please buy my stuff.",
   "icons": [
     {
       "src": "favicon.ico",
