--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-flip-toolkit": "^7.0.2",
     "react-scripts": "3.1.1",
     "typescript": "3.5.3"
   },
