--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "12.7.2",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.8.5",
+    "body-scroll-lock": "^2.6.4",
     "eslint": "^6.1.0",
     "gsap": "^2.1.3",
     "node-sass": "^4.12.0",
