--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.3.2",
     "@material-ui/icons": "^4.2.1",
+    "@types/body-scroll-lock": "^2.6.1",
     "@types/gsap": "^1.20.2",
     "@types/jest": "24.0.17",
     "@types/node": "12.7.2",
