--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "yard-sale",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://saif-rizvi.github.io/yard-sale",
   "dependencies": {
     "@material-ui/core": "^4.3.2",
     "@material-ui/icons": "^4.2.1",
@@ -13,6 +14,7 @@
     "@types/react-dom": "16.8.5",
     "body-scroll-lock": "^2.6.4",
     "eslint": "^6.1.0",
+    "gh-pages": "^2.1.1",
     "gsap": "^2.1.3",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
@@ -25,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
